--- a/build.gradle
+++ b/build.gradle
@@ -9,15 +9,21 @@ repositories {
     maven { url 'https://jitpack.io' }
 }
 
+def ROBOT_CLASS = "org.usfirst.frc.team1540.robot.Robot"
 
 // Defining my dependencies. In this case, WPILib (+ friends), CTRE Toolsuite (Talon SRX)
 // and NavX.
 dependencies {
     compile wpilib()
     compile ctre()
-    compile navx()
-    compile pathfinder()
-    compile 'org.team1540:rooster:master-SNAPSHOT'
+}
+
+// Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
+// in order to make them all available at runtime. Also adding the manifest so WPILib
+// knows where to look for our Robot Class.
+jar {
+    from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    manifest jaci.openrio.gradle.GradleRIOPlugin.javaManifest(ROBOT_CLASS)
 }
 
 task wrapper(type: Wrapper) {
