--- a/build.gradle
+++ b/build.gradle
@@ -1,40 +1,72 @@
+import jaci.openrio.gradle.GradleRIOPlugin
+import jaci.openrio.gradle.frc.FRCJavaArtifact
+import jaci.openrio.gradle.frc.RoboRIO
+
 plugins {
     id "java"
-    id "eclipse"
     id "idea"
+    id "maven"
     id "jaci.openrio.gradle.GradleRIO" version "2018.01.11"
 }
 
-repositories {
-    maven { url 'https://jitpack.io' }
+group = 'org.team1540'
+
+// for JitPack
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
 }
 
-def ROBOT_CLASS = "org.usfirst.frc.team1540.robot.Robot"
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
 
-// Defining my dependencies. In this case, WPILib (+ friends), CTRE Toolsuite (Talon SRX)
-// and NavX.
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
+
 dependencies {
     compile wpilib()
     compile ctre()
 }
 
-// Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
-// in order to make them all available at runtime. Also adding the manifest so WPILib
-// knows where to look for our Robot Class.
+def TEAM = 1540
+def ROBOT_CLASS = "org.team1540.base.testing.XXX"
+
+deploy {
+    targets {
+        target("roborio", RoboRIO) {
+            team = TEAM
+        }
+    }
+    artifacts {
+        artifact('frcJava', FRCJavaArtifact) {
+            targets << "roborio"
+            /*
+            IMPORTANT: With this line in the buildscript, the robot code will not start until
+            you connect your debugger to the robot. Connect by running the "Remote Robot Debug"
+            run configuration which should be shared through version control. Alternatively,
+            remove this line and redeploy.
+            */
+            debug = true
+        }
+    }
+}
+
 jar {
-    from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    manifest jaci.openrio.gradle.GradleRIOPlugin.javaManifest(ROBOT_CLASS)
+    def jp = System.getenv("JITPACK")
+    if (jp == null || jp == "false") {
+        // Since we're deploying to the RIO, create a "fat jar"
+        println "Creating Fat Jar"
+        from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+        manifest GradleRIOPlugin.javaManifest(ROBOT_CLASS)
+    } else {
+        println "Using JitPack"
+    }
 }
 
 task wrapper(type: Wrapper) {
     gradleVersion = '4.4'
-}
-
-// setting the source directory for all the code
-sourceSets {
-    main {
-        java {
-            srcDirs = ['src/']
-        }
-    }
 }
